--- a/package.json
+++ b/package.json
@@ -2,10 +2,61 @@
   "name": "crawler",
   "version": "1.0.0",
   "description": "Simple crawler",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Azat Ahmedov <azat_ah@yahoo.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "npm run prod",
+    "build": "npm run clean && npm run transpile",
+    "server": "node ./dist/index",
+    "dev": "NODE_ENV=development npm run build && npm run server",
+    "prod": "NODE_ENV=production npm run build && npm run server",
+    "transpile": "babel ./src --out-dir dist",
+    "clean": "rimraf dist",
+    "watch:dev": "nodemon",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/runtime": "^7.12.5",
+    "express": "^4.17.1",
+    "isomorphic-unfetch": "^3.1.0",
+    "node-html-parser": "^2.0.0",
+    "nodemon": "^2.0.6",
+    "rimraf": "^3.0.2"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "jest": "^26.6.3"
+  },
+  "nodemonConfig": {
+    "exec": "npm run dev",
+    "watch": [
+      "src/*"
+    ],
+    "ignore": [
+      "**/__tests__/**",
+      "*.test.js",
+      "*.spec.js"
+    ]
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
+  },
+  "plugins": [
+    "@babel/plugin-transform-runtime"
+  ],
+  "jest": {
+    "testEnvironment": "node"
+  }
 }
