--- a/package.json
+++ b/package.json
@@ -7,28 +7,37 @@
   "scripts": {
     "start": "npm run prod",
     "build": "npm run clean && npm run transpile",
-    "server": "node ./dist/index",
+    "server": "node ./dist/server",
     "dev": "NODE_ENV=development npm run build && npm run server",
     "prod": "NODE_ENV=production npm run build && npm run server",
     "transpile": "babel ./src --out-dir dist",
     "clean": "rimraf dist",
     "watch:dev": "nodemon",
-    "test": "jest"
+    "test": "npm run test:coverage",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --ci --reporters=default --detectOpenHandles",
+    "lint": "eslint ./src --ext .js"
   },
   "dependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
     "@babel/runtime": "^7.12.5",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.1.0",
     "node-html-parser": "^2.0.0",
-    "nodemon": "^2.0.6",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/eslint-plugin": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.10",
-    "jest": "^26.6.3"
+    "@babel/preset-env": "^7.12.11",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.16.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
+    "regenerator-runtime": "^0.13.7",
+    "supertest": "^6.0.1"
   },
   "nodemonConfig": {
     "exec": "npm run dev",
@@ -57,6 +66,9 @@
     "@babel/plugin-transform-runtime"
   ],
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
